k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wiz-app
  labels:
    name: wiz-app
